test/parser/error/err_08_var_dup.pl0
program p; 
var x, x; 
begin 
end